mostly working - filters not working

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
   <!-- google analytics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Face Coverings Distribution</title>
-  <link rel="stylesheet" href="css/face-coverings.css?%ver%">
+  <title>COVID Testing Facilities</title>
+  <link rel="stylesheet" href="css/covid-testing.css?%ver%">
   <script src="js/babel-polyfill.js?%ver%"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.4.0/papaparse.min.js"></script>
 </head>
 <body class="loading" aria-hidden="true">
-  <script src="js/face-coverings.js?%ver%"></script>
+  <script src="js/covid-testing.js?%ver%"></script>
 </body>
 </html>
