proper meta data

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <!-- google analytics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>COVID Testing Facilities</title>
+  <title>COVID-19 Diagnostic Testing Sites</title>
   <link rel="stylesheet" href="css/covid-testing.css?%ver%">
   <script src="js/babel-polyfill.js?%ver%"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
