manifest og img

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <!-- google analytics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta envPostfix="og: http:/ogp.me/ns#" property="og:image" content="https://maps.nyc.gov/nyc-lib/archive/og.png">
+  <meta envPostfix="og: http:/ogp.me/ns#" property="og:image:width" content="1200">
   <title>COVID-19 Diagnostic Testing Sites</title>
   <link rel="stylesheet" href="css/covid-testing.css?%ver%">
   <script src="js/babel-polyfill.js?%ver%"></script>
