--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js" integrity="sha512-ha3Is9IgbEyIInSb+4S6IlEwpimz00N5J/dVLQFKhePkZ/HywIbxLeEu5w+hRjVBpbujTogNyT311tluwemy9w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
 </head>
 <body class="loading" aria-hidden="true">
-  <img id="monorail" src="https://media0.giphy.com/media/l2Je8YG8hW0q1fQo8/giphy.gif?cid=ecf05e47vq4gfvlogz3m9jkw47kqzlwli30qtf9179us112m&rid=giphy.gif&ct=g">
+  <div id="monorail"></div>
   <script src="js/covid-testing.js?%ver%"></script>
 </body>
 </html>
